fix alignment for text in features section on homepage

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -147,6 +147,9 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-bottom: 1.25rem;
 
     &:last-of-type {
@@ -157,6 +160,10 @@
   &-item-icon {
     width: 30px;
     flex: 0 0 auto;
+
+    img {
+      display: block;
+    }
   }
 
   &-item-text {
